wip: Second pass on deprecations